--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: python
 python:
-  - 3.7
+    - "3.7"
+before_install:
+    - pip install codecov
+script:
+    - python -m unittest WestCoastAD.test.forward_mode_AD_test
+after_success:
+    - codecov
